<resources>
    <string name="app_name">Football Apps</string>
    <string name="match_nav">Match</string>
    <string name="team_nav">Team</string>
    <string name="favorite_nav">Favorite</string>
    <string name="favorite">favorite</string>
    <string name="search">search</string>
    <string name="vs">VS</string>
    <string name="dateMatch">11-11-2018</string>
    <string name="timeMatch">23:30</string>
    <string name="image">Image</string>
    <string name="goals">GOALS</string>
    <string name="shots">SHOTS</string>
    <string name="lineups">Lineups</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="hello_world">Hello World!</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="height_m">Height (m)</string>
    <string name="player">Player</string>
    <string name="textDetails">%1$s\\n%2$s</string>

    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>Spanish La Liga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>>
        <item>German Bundesliga</item>
    </array>
</resources>
