<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.activityDetail.ActivityDetailPlayer">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/player_banner_detail"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:background="@color/white"
                android:scaleType="centerCrop"
                android:contentDescription="@string/player"
                tools:src="@tools:sample/backgrounds/scenic"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/weight_kg"
                    android:textAlignment="center"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/height_m"
                    android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/player_weight_detail"
                    style="@style/TextAppearance.AppCompat.Display2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    tools:text="94 kg"/>

            <TextView
                    android:id="@+id/player_height_detail"
                    style="@style/TextAppearance.AppCompat.Display2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    tools:text="1.90 m"/>

        </LinearLayout>

        <TextView
                android:id="@+id/player_position_detail"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="Forward"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/gray"/>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/player_description_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    tools:text="Description"/>

        </ScrollView>

    </LinearLayout>

</ScrollView>