<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3dp"
        android:layout_margin="3dp">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="3dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="2dp">

            <TextView
                    android:id="@+id/dateMatch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/dateMatch"/>

            <TextView
                    android:id="@+id/timeMatch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/timeMatch"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/homeTeam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="6dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        tools:text="Man City" />

                <LinearLayout
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                    <TextView
                            android:id="@+id/homeScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            tools:text="3" />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="2dp"
                            android:text="@string/vs"
                            android:textColor="@color/gray"
                            android:textSize="18sp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:textStyle="bold" />

                    <TextView
                            android:id="@+id/awayScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            tools:text="1" />

                </LinearLayout>

                <TextView
                        android:id="@+id/awayTeam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="6dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        tools:text="Man Utd" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>